[workspace]
members = ["crates/redface-core", "crates/redface-recognition", "crates/ncnn", "crates/ncnn-bind", "crates/redface-record", "crates/redface-capture", "crates/redface-runtime", "crates/redfaced", "crates/redface-check", "crates/redface-lock", "crates/pam-redface"]
resolver = "3"

[workspace.dependencies]
redface-core = { path = "crates/redface-core" }
redface-capture = { path = "crates/redface-capture" }
redface-recognition = { path = "crates/redface-recognition", default-features = false }
redface-runtime = { path = "crates/redface-runtime", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true


