[package]
name = "pam-redface"
version = "0.1.0"
edition = "2024"

[dependencies]
redface-runtime = { workspace = true }
pam = { package = "pam-bindings", version = "0.3.0" }
users = "0.11"

[lib]
name = "pam_redface"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
openvino = ["redface-runtime/openvino"]
