[package]
name = "redface-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
redface-runtime = { workspace = true }
redface-toolkit = { path = "../redface-toolkit" }
serde = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[[bin]]
name = "redface-lock"
path = "src/main.rs"

[features]
default = ["ncnn"]
ncnn = ["redface-runtime/ncnn"]
openvino = ["redface-runtime/openvino"]
