[package]
name = "redface-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
redface-capture = { workspace = true }
redface-core = { workspace = true }
redface-recognition = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
default = ["ncnn"]
ncnn = ["redface-recognition/ncnn"]
openvino = ["redface-recognition/openvino"]
